--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta http-equiv="expires" content="-1">
     <title>大辽尖峰时刻：全民寻找房祖名！</title>
 
-    <link rel="shortcut icon" href="me.png">
-    <link rel="icon" href="me.png" >
+    <link rel="shortcut icon" href="http://img1.gtimg.com/ln/pics/hv1/225/53/1683/109450815.png">
+    <link rel="icon" href="http://img1.gtimg.com/ln/pics/hv1/225/53/1683/109450815.png" >
 
     <link type="text/css" href="m.css"  rel="stylesheet">
     <link type="text/css" href="comment.css" rel="stylesheet">
@@ -21,7 +21,7 @@
     <script type="text/javascript">
 
         window.shareData = {
-            "imgUrl": "me.png",
+            "imgUrl": "http://img1.gtimg.com/ln/pics/hv1/225/53/1683/109450815.png",
             "timeLineLink": window.location.href,
             "tTitle": "大辽尖峰时刻：全民寻找房祖名！",
             "tContent": "尖峰时刻：全民寻找房祖名！虽然柯少向龙叔保证不会带坏房祖名,但龙叔强烈要求你找回祖名。"
