--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <link type="text/css" href="m.css"  rel="stylesheet">
     <link type="text/css" href="comment.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="http://ln.qq.com/images/2014zt/08/WXnav/menu.css" media="all">
+    <link rel="stylesheet" type="text/css" href="menu.css" media="all">
     <script src="1.js"></script>
     <script src="2.js"></script>
     <script type="text/javascript">
@@ -194,12 +194,12 @@
 </script>
 <script src="3.js"></script>
 <script src="4.js"></script>
-<script src="http://ln.qq.com/images/2014zt/08/WXnav/nav4.js"></script>
+<script src="nav4.js"></script>
 <script type="text/javascript">
     nav4.bindClick(document.getElementById("nav4_ul").querySelectorAll("li>a"), document.getElementById("nav4_masklayer"));
 </script>
 
-<script language="javascript" src="http://pingjs.qq.com/ping.js"></script>
+<script language="javascript" src="ping.js"></script>
 <script language="javascript">if(typeof(pgvMain) == 'function') pgvMain();</script>
 
 </body></html><!--[if !IE]>|xGv00|184969dacb8ddd2f94a1b3c60d767153<![endif]-->
