--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta http-equiv="expires" content="-1">
     <title>大辽尖峰时刻：全民寻找房祖名！</title>
 
-    <link rel="shortcut icon" href="http://img1.gtimg.com/ln/pics/hv1/225/53/1683/109450815.png">
-    <link rel="icon" href="http://img1.gtimg.com/ln/pics/hv1/225/53/1683/109450815.png" >
+    <link rel="shortcut icon" href="http://img1.gtimg.com/ln/pics/hv1/225/53/1683/109450815.png?s=1408156955">
+    <link rel="icon" href="http://img1.gtimg.com/ln/pics/hv1/225/53/1683/109450815.png?s=1408156955" >
 
     <link type="text/css" href="m.css"  rel="stylesheet">
     <link type="text/css" href="comment.css" rel="stylesheet">
