--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <link rel="shortcut icon" href="http://img1.gtimg.com/ln/pics/hv1/225/53/1683/109450815.png?s=1408156955">
     <link rel="icon" href="http://img1.gtimg.com/ln/pics/hv1/225/53/1683/109450815.png?s=1408156955" >
 
-    <link type="text/css" href="m.css"  rel="stylesheet">
-    <link type="text/css" href="comment.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="menu.css" media="all">
-    <script src="1.js"></script>
-    <script src="2.js"></script>
+    <link type="text/css" href="http://ln.qq.com/images/2014zt/08/1819/m.css"  rel="stylesheet">
+    <link type="text/css" href="http://ln.qq.com/images/2014zt/08/1819/common.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="http://ln.qq.com/images/2014zt/08/WXnav/menu.css" media="all">
+    <script src="http://ln.qq.com/images/2014zt/08/1819/zepto.min.js?s=1408156955"></script>
+    <script src="http://ln.qq.com/images/2014zt/08/1819/common.js?s=1408156955"></script>
     <script type="text/javascript">
 
         window.shareData = {
@@ -192,9 +192,9 @@
 
 
 </script>
-<script src="3.js"></script>
-<script src="4.js"></script>
-<script src="nav4.js"></script>
+<script src="http://ln.qq.com/images/2014zt/08/1819/libs.min.js?s=1408156955"></script>
+<script src="http://ln.qq.com/images/2014zt/08/1819/main.min.js?s=1408176571"></script>
+<script src="http://ln.qq.com/images/2014zt/08/WXnav/nav4.js"></script>
 <script type="text/javascript">
     nav4.bindClick(document.getElementById("nav4_ul").querySelectorAll("li>a"), document.getElementById("nav4_masklayer"));
 </script>
