--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <meta http-equiv="expires" content="-1">
     <title>大辽尖峰时刻：全民寻找房祖名！</title>
 
-    <link rel="shortcut icon" href="http://img1.gtimg.com/ln/pics/hv1/225/53/1683/109450815.png?s=1408156955">
-    <link rel="icon" href="http://img1.gtimg.com/ln/pics/hv1/225/53/1683/109450815.png?s=1408156955" >
+    <link rel="shortcut icon" href="http://img1.gtimg.com/ln/pics/hv1/225/53/1683/109450815.png">
+    <link rel="icon" href="http://img1.gtimg.com/ln/pics/hv1/225/53/1683/109450815.png" >
 
     <link type="text/css" href="http://ln.qq.com/images/2014zt/08/1819/m.css"  rel="stylesheet">
     <link type="text/css" href="http://ln.qq.com/images/2014zt/08/1819/common.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="http://ln.qq.com/images/2014zt/08/WXnav/menu.css" media="all">
-    <script src="http://ln.qq.com/images/2014zt/08/1819/zepto.min.js?s=1408156955"></script>
-    <script src="http://ln.qq.com/images/2014zt/08/1819/common.js?s=1408156955"></script>
+    <script src="http://ln.qq.com/images/2014zt/08/1819/zepto.min.js"></script>
+    <script src="http://ln.qq.com/images/2014zt/08/1819/common.js"></script>
     <script type="text/javascript">
 
         window.shareData = {
@@ -192,8 +192,8 @@
 
 
 </script>
-<script src="http://ln.qq.com/images/2014zt/08/1819/libs.min.js?s=1408156955"></script>
-<script src="http://ln.qq.com/images/2014zt/08/1819/main.min.js?s=1408176571"></script>
+<script src="http://ln.qq.com/images/2014zt/08/1819/libs.min.js"></script>
+<script src="http://ln.qq.com/images/2014zt/08/1819/main.min.js"></script>
 <script src="http://ln.qq.com/images/2014zt/08/WXnav/nav4.js"></script>
 <script type="text/javascript">
     nav4.bindClick(document.getElementById("nav4_ul").querySelectorAll("li>a"), document.getElementById("nav4_masklayer"));
