--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="pragma" content="no-cache">
     <meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
     <meta http-equiv="expires" content="-1">
-    <title>大辽尖峰时刻：全民寻找房祖名！</title>
+    <title>寻找哈哈靖</title>
 
     <link rel="shortcut icon" href="http://tvxqljw.github.io/demo/me.png">
     <link rel="icon" href="http://tvxqljw.github.io/demo/me.png" >
@@ -23,8 +23,8 @@
         window.shareData = {
             "imgUrl": "http://tvxqljw.github.io/demo/me.png",
             "timeLineLink": window.location.href,
-            "tTitle": "大辽尖峰时刻：全民寻找房祖名！",
-            "tContent": "尖峰时刻：全民寻找房祖名！虽然柯少向龙叔保证不会带坏房祖名,但龙叔强烈要求你找回祖名。"
+            "tTitle": "寻找哈哈靖",
+            "tContent": "快点过来寻找哈哈靖"
         };
     </script>
 
