--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             "imgUrl": "http://tvxqljw.github.io/demo/me.png",
             "timeLineLink": window.location.href,
             "tTitle": "寻找哈哈靖",
-            "tContent": "快点过来寻找哈哈靖"
+            "tContent": "come on！"
         };
     </script>
 
