--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         loading...
     </div>
     <div class="page hide" id="index" style="display: block;">
-        <h1>大辽尖峰时刻:</br>全民寻找房祖名</h1>
+        <h1>come on</br>全民寻找哈哈靖</h1>
 
-        <div id="help">虽然柯少向龙叔保证不会带坏房祖名,但龙叔强烈要求你找回祖名。</div>
+        <div id="help">来寻找哈哈靖吧</div>
         <div id="logo"></div>
         <div class="btns">
             <button data-type="color" class="btn play-btn">
@@ -148,9 +148,7 @@
         <!--菜单-->
     </div>
 </div>
-<div class="bq" style="position: absolute;; left:50%; bottom:0px; margin-left:-48px">
-    <img src="http://mat1.gtimg.com/ln/images/2014zt/08/1819/logo.png" width="100px">
-</div>
+
 
 <script type="text/javascript">
     btGame.onlyVScreen();
