--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
 </script>
 <script src="http://ln.qq.com/images/2014zt/08/1819/libs.min.js"></script>
-<script src="http://ln.qq.com/images/2014zt/08/1819/main.min.js"></script>
+<script src="4.js"></script>
 <script src="http://ln.qq.com/images/2014zt/08/WXnav/nav4.js"></script>
 <script type="text/javascript">
     nav4.bindClick(document.getElementById("nav4_ul").querySelectorAll("li>a"), document.getElementById("nav4_masklayer"));
