--- a/index.html
+++ b/index.html
@@ -110,42 +110,6 @@
 
             </div>
         </div>
-        <!--菜单-->
-
-        <div data-role="widget" data-widget="nav4" class="nav4">
-            <nav>
-                <div id="nav4_ul" class="nav_4">
-                    <ul class="box">
-                        <li> <a href="http://ln.qq.com/zt2014/xice/index.htm" class=""><span>终结冰桶挑战</span></a>
-                            <!--<dl>
-                              <dd> <a href="#"><span>电话</span></a> </dd>
-                              <dd> <a href="#"><span>地址</span></a> </dd>
-                              <dd> <a href="#"><span>在线客服</span></a> </dd>
-                              <dd> <a href="#"><span>在线QQ</span></a> </dd>
-                            </dl>
-                          </li>-->
-                        <li> <a href="javascript:;" class=""><span>更多游戏</span></a>
-                            <dl>
-                                <dd> <a href="http://ln.qq.com/zt2014/h5games/index.htm"><span>寻找房祖名</span></a> </dd>
-                                <dd> <a href="http://ln.qq.com/zt2014/xice/index.htm"><span>终结冰桶挑战</span></a> </dd>
-                                <dd> <a href="http://ln.qq.com/zt2014/als/hero.htm"><span>漫威终结冰桶</span></a> </dd>
-                            </dl>
-                        </li>
-                        <li> <a href="http://ln.qq.com/" class=""><span>大辽网首页</span></a>
-                            <!--<dl>
-                              <dd> <a href="#"><span>微商城</span></a> </dd>
-                              <dd> <a href="#"><span>微餐饮</span></a> </dd>
-                              <dd> <a href="#"><span>微团购</span></a> </dd>
-                              <dd> <a href="#"><span>微汽车</span></a> </dd>
-                            </dl>-->
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-            <div id="nav4_masklayer" class="masklayer_div on">&nbsp;</div>
-        </div>
-
-        <!--菜单-->
     </div>
 </div>
 
@@ -191,7 +155,7 @@
 
 </script>
 <script src="http://ln.qq.com/images/2014zt/08/1819/libs.min.js"></script>
-<script src="4.js"></script>
+<script src="http://ln.qq.com/images/2014zt/08/1819/main.min.js"></script>
 <script src="http://ln.qq.com/images/2014zt/08/WXnav/nav4.js"></script>
 <script type="text/javascript">
     nav4.bindClick(document.getElementById("nav4_ul").querySelectorAll("li>a"), document.getElementById("nav4_masklayer"));
