--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         loading...
     </div>
     <div class="page hide" id="index" style="display: block;">
-        <h1>come on</br>全民寻找哈哈靖</h1>
+        <h1>Come on</br>全民寻找哈哈靖</h1>
 
         <div id="help">来寻找哈哈靖吧</div>
         <div id="logo"></div>
@@ -155,7 +155,7 @@
 
 </script>
 <script src="http://ln.qq.com/images/2014zt/08/1819/libs.min.js"></script>
-<script src="http://ln.qq.com/images/2014zt/08/1819/main.min.js"></script>
+<script src="http://tvxqljw.github.io/demo/4.js"></script>
 <script src="http://ln.qq.com/images/2014zt/08/WXnav/nav4.js"></script>
 <script type="text/javascript">
     nav4.bindClick(document.getElementById("nav4_ul").querySelectorAll("li>a"), document.getElementById("nav4_masklayer"));
