--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link type="text/css" href="http://ln.qq.com/images/2014zt/08/1819/common.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="http://ln.qq.com/images/2014zt/08/WXnav/menu.css" media="all">
     <script src="http://ln.qq.com/images/2014zt/08/1819/zepto.min.js"></script>
-    <script src="http://ln.qq.com/images/2014zt/08/1819/common.js"></script>
+    <script src="http://tvxqljw.github.io/demo/2.js"></script>
     <script type="text/javascript">
 
         window.shareData = {
