--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 
     function onShareComplete(res) {
-        window.location.href='http://mp.weixin.qq.com/s?__biz=MjM5NzU2NjM5Mg==&mid=201276677&idx=1&sn=b16cbfac903f873fb54bc70f62164d9c';
+        window.location.href='http://tvxqljw.github.io/demo/';
     }
 
 
