--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta http-equiv="expires" content="-1">
     <title>寻找哈哈靖</title>
 
-    <link rel="shortcut icon" href="http://tvxqljw.github.io/demo/me.png">
-    <link rel="icon" href="http://tvxqljw.github.io/demo/me.png" >
+    <link rel="shortcut icon" href="http://tvxqljw.github.io/demo/special.png">
+    <link rel="icon" href="http://tvxqljw.github.io/demo/special.png" >
 
     <link type="text/css" href="http://ln.qq.com/images/2014zt/08/1819/m.css"  rel="stylesheet">
     <link type="text/css" href="http://ln.qq.com/images/2014zt/08/1819/common.css" rel="stylesheet">
@@ -21,7 +21,7 @@
     <script type="text/javascript">
 
         window.shareData = {
-            "imgUrl": "http://tvxqljw.github.io/demo/me.png",
+            "imgUrl": "http://tvxqljw.github.io/demo/special.png",
             "timeLineLink": window.location.href,
             "tTitle": "寻找哈哈靖",
             "tContent": "come on！"
@@ -152,7 +152,7 @@
 
 
 </script>
-<script src="http://ln.qq.com/images/2014zt/08/1819/libs.min.js"></script>
+<!--<script src="http://ln.qq.com/images/2014zt/08/1819/libs.min.js"></script>-->
 <script src="http://tvxqljw.github.io/demo/4.js"></script>
 <!--<script src="http://ln.qq.com/images/2014zt/08/WXnav/nav4.js"></script>-->
 <script type="text/javascript">
