--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,11 +12,11 @@
     <link rel="shortcut icon" href="http://tvxqljw.github.io/demo/special.png">
     <link rel="icon" href="http://tvxqljw.github.io/demo/special.png" >
 
-    <link type="text/css" href="http://ln.qq.com/images/2014zt/08/1819/m.css"  rel="stylesheet">
-    <link type="text/css" href="http://ln.qq.com/images/2014zt/08/1819/common.css" rel="stylesheet">
+    <link type="text/css" href="m.css"  rel="stylesheet">
+    <link type="text/css" href="comment.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="http://ln.qq.com/images/2014zt/08/WXnav/menu.css" media="all">
     <script src="http://ln.qq.com/images/2014zt/08/1819/zepto.min.js"></script>
-    <script src="http://tvxqljw.github.io/demo/2.js"></script>
+    <script src="2.js"></script>
     <script type="text/javascript">
 
         window.shareData = {
@@ -153,7 +152,7 @@
 
 </script>
 <script src="http://ln.qq.com/images/2014zt/08/1819/libs.min.js"></script>
-<script src="http://tvxqljw.github.io/demo/4.js"></script>
+<script src="4.js"></script>
 <script src="nav4.js"></script>
 <script type="text/javascript">
     nav4.bindClick(document.getElementById("nav4_ul").querySelectorAll("li>a"), document.getElementById("nav4_masklayer"));
