--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link type="text/css" href="m.css"  rel="stylesheet">
     <link type="text/css" href="comment.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="menu.css" media="all">
-    <!--<script src="http://ln.qq.com/images/2014zt/08/1819/zepto.min.js"></script>-->
+    <script src="http://ln.qq.com/images/2014zt/08/1819/zepto.min.js"></script>
     <script src="2.js"></script>
     <script type="text/javascript">
 
