--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
 
 </script>
-<!--<script src="http://ln.qq.com/images/2014zt/08/1819/libs.min.js"></script>-->
+<script src="http://ln.qq.com/images/2014zt/08/1819/libs.min.js"></script>
 <script src="4.js"></script>
 <script src="nav4.js"></script>
 <script type="text/javascript">
