--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         window.shareData = {
             "imgUrl": "http://tvxqljw.github.io/demo/special.png",
             "timeLineLink": window.location.href,
-            "tTitle": "寻找哈哈靖",
+            "tTitle": "寻找汪涵",
             "tContent": "come on！"
         };
     </script>
@@ -53,9 +53,9 @@
         loading...
     </div>
     <div class="page hide" id="index" style="display: block;">
-        <h1>Come on</br>全民寻找哈哈靖</h1>
+        <h1>Come on</br>全城热找汪涵</h1>
 
-        <div id="help">来寻找哈哈靖吧</div>
+        <div id="help">芒果台着急了！来寻找汪涵吧</div>
         <div id="logo"></div>
         <div class="btns">
             <button data-type="color" class="btn play-btn">
