--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         loading...
     </div>
     <div class="page hide" id="index" style="display: block;">
-        <h1>Come on</br>全城热找汪涵</h1>
+        <h1>Come on</br>快从徐峥身边中找到汪涵吧！</h1>
 
-        <div id="help">芒果台着急了！来寻找汪涵吧</div>
+        <div id="help">徐峥撞脸汪涵似双胞胎大叔！</div>
         <div id="logo"></div>
         <div class="btns">
             <button data-type="color" class="btn play-btn">
