--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="pragma" content="no-cache">
     <meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
     <meta http-equiv="expires" content="-1">
-    <title>寻找哈哈靖</title>
+    <title>全城热找汪涵</title>
 
     <link rel="shortcut icon" href="http://tvxqljw.github.io/demo/special.png">
     <link rel="icon" href="http://tvxqljw.github.io/demo/special.png" >
@@ -53,9 +53,9 @@
         loading...
     </div>
     <div class="page hide" id="index" style="display: block;">
-        <h1>Come on</br>快从徐峥身边中找到汪涵吧！</h1>
+        <h1>徐峥撞脸汪涵似双胞胎大叔！还等什么？</h1>
 
-        <div id="help">徐峥撞脸汪涵似双胞胎大叔！</div>
+        <div id="help">快从徐峥身边中找到汪涵吧！</div>
         <div id="logo"></div>
         <div class="btns">
             <button data-type="color" class="btn play-btn">
