--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="pragma" content="no-cache">
     <meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
     <meta http-equiv="expires" content="-1">
-    <title>全城热找汪涵</title>
+    <title>天天向上：真假Grace！</title>
 
     <link rel="shortcut icon" href="http://tvxqljw.github.io/demo/special.png">
     <link rel="icon" href="http://tvxqljw.github.io/demo/special.png" >
@@ -21,7 +21,7 @@
         window.shareData = {
             "imgUrl": "http://tvxqljw.github.io/demo/special.png",
             "timeLineLink": window.location.href,
-            "tTitle": "寻找汪涵",
+            "tTitle": "天天向上：真假Grace！",
             "tContent": "come on！"
         };
     </script>
@@ -53,10 +53,15 @@
         loading...
     </div>
     <div class="page hide" id="index" style="display: block;">
-        <h1>徐峥撞脸汪涵似双胞胎大叔！还等什么？</h1>
+        <h1></h1>
 
-        <div id="help">快从徐峥身边中找到汪涵吧！</div>
-        <div id="logo"></div>
+        <div id="help">汪涵、曹格和小五假扮grace。让我们把他们找出来吧！</div>
+        <div id="logo">
+            <div class="shero"><img src="1.png" width="200" height="200"></div>
+            <div class="shero"><img src="2.png" width="200" height="200"></div>
+            <div class="shero"><img src="3.png" width="200" height="200"></div>
+            <div class="shero"><img src="4.png" width="200" height="200"></div>
+        </div>
         <div class="btns">
             <button data-type="color" class="btn play-btn">
                 开始游戏
