--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 
         <div id="help">汪涵、曹格和小五假扮grace。让我们把他们找出来吧！</div>
         <div id="logo">
-            <div class="shero"><img src="1.png" width="200" height="200"></div>
-            <div class="shero"><img src="2.png" width="200" height="200"></div>
-            <div class="shero"><img src="3.png" width="200" height="200"></div>
-            <div class="shero"><img src="4.png" width="200" height="200"></div>
+            <div class="shero"><img src="1.png"></div>
+            <div class="shero"><img src="2.png"></div>
+            <div class="shero"><img src="3.png"></div>
+            <div class="shero"><img src="4.png"></div>
         </div>
         <div class="btns">
             <button data-type="color" class="btn play-btn">
