--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta http-equiv="expires" content="-1">
     <title>天天向上：真假Grace！</title>
 
-    <link rel="shortcut icon" href="http://tvxqljw.github.io/demo/special.png">
-    <link rel="icon" href="http://tvxqljw.github.io/demo/special.png" >
+    <link rel="shortcut icon" href="http://tvxqljw.github.io/demo/1.png">
+    <link rel="icon" href="http://tvxqljw.github.io/demo/1.png" >
     <link type="text/css" href="m.css"  rel="stylesheet">
     <link type="text/css" href="comment.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="menu.css" media="all">
@@ -19,7 +19,7 @@
     <script type="text/javascript">
 
         window.shareData = {
-            "imgUrl": "http://tvxqljw.github.io/demo/special.png",
+            "imgUrl": "http://tvxqljw.github.io/demo/1.png",
             "timeLineLink": window.location.href,
             "tTitle": "天天向上：真假Grace！",
             "tContent": "come on！"
@@ -45,11 +45,6 @@
         #dialog .inner .content{padding-top:0;}
         #dialog .inner h3{font-size:30px; line-height:40px;}
 
-        /*.onSelect {*/
-            /*border: 3px solid #EEEEEE;*/
-            /*background: url(http://mat1.gtimg.com/ln/images/2014zt/08/alsGame/ice_bg.jpg) 0 0 no-repeat;*/
-            /*background-size: 100%;*/
-        /*}*/
     </style>
 
 </head>
@@ -66,7 +61,7 @@
             <div id="role1" class="shero" onclick="roleChoose(1)"><img src="1.png"></div>
             <div id="role2" class="shero" onclick="roleChoose(2)"><img src="2.png"></div>
             <div id="role3" class="shero" onclick="roleChoose(3)"><img src="3.png"></div>
-            <div id="role4" class="shero" onclick="roleChoose(4)"><img src="4.png"></div>
+            <div id="role4" class="shero onSelect" onclick="roleChoose(4)"><img src="4.png"></div>
         </div>
         <div class="btns">
             <button data-type="color" class="btn play-btn">
@@ -121,7 +116,7 @@
 </div>
 
 <script>
-    var role;
+    var role =4;//默认第一个
     var obj = document.getElementsByClassName('shero');
     function roleChoose(id){
             for(var i =1; i<obj.length+1; i++){
@@ -129,7 +124,7 @@
             }
             $("#role"+id).addClass("onSelect");
         if(id == 4){
-            id = random(1,4);
+            id = random(1,3);
         }
             role = id;
     }
@@ -140,6 +135,8 @@
         return Math.floor(min+Math.random()*(max-min));
 
     }
+
+
 
 </script>
 
