--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 </div>
 
 <script>
-    var role =4;//默认第一个
+    var role = random(1,3);//默认第一个
     var obj = document.getElementsByClassName('shero');
     function roleChoose(id){
             for(var i =1; i<obj.length+1; i++){
