--- a/index.html
+++ b/index.html
@@ -114,7 +114,12 @@
         </div>
     </div>
 </div>
-
+<!--<div class="bq" style="position: absolute;; left:50%; bottom:0px; margin-left:-48px">-->
+    <!--&lt;!&ndash;<img src="http://mat1.gtimg.com/ln/images/2014zt/08/1819/logo.png" width="100px">&ndash;&gt;-->
+<!--</div>-->
+<div class="bq" style="position: absolute; bottom:0;left: 20%">
+    湖南卫视《天天向上》-芒果互娱联合出品
+</div>
 <script>
     var role = random(1,3);//默认第一个
     var obj = document.getElementsByClassName('shero');
@@ -182,7 +187,7 @@
 </script>
 <script src="libs.min.js"></script>
 <script src="4.js"></script>
-<script src="nav4.js"></script>
+<!--<script src="nav4.js"></script>-->
 <script type="text/javascript">
     nav4.bindClick(document.getElementById("nav4_ul").querySelectorAll("li>a"), document.getElementById("nav4_masklayer"));
 </script>
