--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <!--<div class="bq" style="position: absolute;; left:50%; bottom:0px; margin-left:-48px">-->
     <!--&lt;!&ndash;<img src="http://mat1.gtimg.com/ln/images/2014zt/08/1819/logo.png" width="100px">&ndash;&gt;-->
 <!--</div>-->
-<div class="bq" style="position: absolute; bottom:0;left: 20%">
+<div class="bq" style=" width: 100%; text-align: center; position: absolute; bottom:0;">
     湖南卫视《天天向上》-芒果互娱联合出品
 </div>
 <script>
