--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             "imgUrl": "http://tvxqljw.github.io/demo/1.png",
             "timeLineLink": window.location.href,
             "tTitle": "天天向上：真假Grace！",
-            "tContent": "come on！"
+            "tContent": "汪涵、曹格和小五假扮grace。让我们把他们找出来吧！"
         };
     </script>
 
