--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             "imgUrl": "http://tvxqljw.github.io/demo/1.png",
             "timeLineLink": window.location.href,
             "tTitle": "天天向上：真假Grace！",
-            "tContent": "汪涵、曹格和小五假扮grace。让我们把他们找出来吧！"
+            "tContent": "汪涵、曹格和小五假扮Grace姐姐。让我们把他们找出来吧！"
         };
     </script>
 
@@ -56,7 +56,7 @@
     <div class="page hide" id="index" style="display: block;">
         <h1></h1>
 
-        <div id="help">汪涵、曹格和小五假扮grace。让我们把他们找出来吧！</div>
+        <div id="help">汪涵、曹格和小五假扮Grace姐姐。让我们把他们找出来吧！</div>
         <div id="logo">
             <div id="role1" class="shero" onclick="roleChoose(1)"><img src="1.png"></div>
             <div id="role2" class="shero" onclick="roleChoose(2)"><img src="2.png"></div>
