--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="pragma" content="no-cache">
     <meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
     <meta http-equiv="expires" content="-1">
-    <title>天天向上：真假Grace！</title>
+    <title>天天向上：真假Grace姐姐！</title>
 
     <link rel="shortcut icon" href="http://tvxqljw.github.io/demo/1.png">
     <link rel="icon" href="http://tvxqljw.github.io/demo/1.png" >
@@ -21,7 +21,7 @@
         window.shareData = {
             "imgUrl": "http://tvxqljw.github.io/demo/1.png",
             "timeLineLink": window.location.href,
-            "tTitle": "天天向上：真假Grace！",
+            "tTitle": "天天向上：真假Grace姐姐！",
             "tContent": "汪涵、曹格和小五假扮Grace姐姐。让我们把他们找出来吧！"
         };
     </script>
