--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
                         再来一次
                     </button>
                 </div>
+                <br/>
+                <h5 style="width: 80%; margin:auto">本周五晚8点欢迎收看湖南卫视《天天向上》</h5>
             </div>
             <div class="content pause">
                 <h3>
@@ -109,6 +111,8 @@
                         继续游戏
                     </button>
                 </div>
+                <br/>
+                <h5 style="width: 80%; margin:auto">本周五晚8点欢迎收看湖南卫视《天天向上》</h5>
 
             </div>
         </div>
