--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
                     </button>
                 </div>
                 <br/>
-                <h5 style="width: 80%; margin:auto">本周五晚8点欢迎收看湖南卫视《天天向上》</h5>
+                <div class="ad">
+                    本周五晚8点欢迎收看湖南卫视《天天向上》
+                </div>
             </div>
             <div class="content pause">
                 <h3>
@@ -112,7 +114,9 @@
                     </button>
                 </div>
                 <br/>
-                <h5 style="width: 80%; margin:auto">本周五晚8点欢迎收看湖南卫视《天天向上》</h5>
+                <div class="ad">
+                    本周五晚8点欢迎收看湖南卫视《天天向上》
+                </div>
 
             </div>
         </div>
