--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </div>
                 <br/>
                 <div class="ad">
-                    本周五晚8点欢迎收看湖南卫视《天天向上》
+                    <img src="back.jpg">
                 </div>
             </div>
             <div class="content pause">
@@ -115,7 +115,7 @@
                 </div>
                 <br/>
                 <div class="ad">
-                    本周五晚8点欢迎收看湖南卫视《天天向上》
+                   <img src="back.jpg">
                 </div>
 
             </div>
